"* **Breaking API** Add SSID notification"

### 0.0.3

* retry live preview when it fails
* Add prepare API for image
* Fix wasJustIssued Logic
* Add endwlan api